components/ra/settings-tool/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: settings-tool-service
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8080
      targetPort: 8080
