components/ra/settings-tool/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: settings-tool-service
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "*.developers.facilities.rl.ac.uk"
    - "*.facilities.rl.ac.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /SettingsToolService
      backendRefs:
        - name: settings-tool-service
          port: 8080
